category overflow dropdown fix

--- a/.less/Page header.less
+++ b/.less/Page header.less
@@ -131,6 +131,21 @@
     }
 }
 
+// ======================================
+//      Categories ovelflow dropdown
+// ======================================
+#PageHeader .page-header__categories-dropdown {
+    .dropdown-pointer-styling;
+
+    .page-header__categories-dropdown-content {
+        .dropdown-styling;
+
+        ul {
+            .scroll-bar-styling;
+        }
+    }
+}
+
 // ==========================
 //      Wikiapage header
 // ==========================
